--- a/styles.css
+++ b/styles.css
@@ -33,51 +33,6 @@ button:hover {
     background-color: rgb(215, 215, 215);
 }
 
-
-form {
-    margin: 50px;
-    padding: 20px;
-    width: 350px;
-    height: 450px;
-    border-radius: 10px;
-    background-color: rgb(247, 247, 247);
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    position: relative;
-    margin: 100px auto;
- 
-}
-
-input {
-    width: 260px;
-    height: 50px;
-    font-size: 24px;
-    border-radius: 10px;
-    border: none;
-    padding: 10px;
-}
-
-input[type="checkbox"] {
-    width: 30px;
-    height: 30px;
-    margin-left: 10px;
-}
-
-#form-checkbox {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-}
-
-#submitButton {
-    width: 260px;
-    height: 50px;
-}
-
 #cards {
     padding: 50px;
     gap: 50px;
@@ -107,10 +62,64 @@ input[type="checkbox"] {
     justify-content: space-around;
 }
 
-.title {
-    font-weight: bold;
+    .title {
+        font-weight: bold;
+    }
+
+    .readButton, .removeButton {
+        width: 100%;
+    }
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.readButton, .removeButton {
-    width: 100%;
+form {
+    padding: 20px;
+    width: 350px;
+    height: 450px;
+    border-radius: 10px;
+    background-color: rgb(247, 247, 247);
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    position: absolute;
+    top: 50%;
+    left: 50%; /* places the top right of the form in the center of the screen */
+    margin-top: -225px;
+    margin-left: -175px; /* moves the form left & up by half its width & height respectively */
 }
+
+    input {
+        width: 260px;
+        height: 50px;
+        font-size: 24px;
+        border-radius: 10px;
+        border: none;
+        padding: 10px;
+    }
+
+    input[type="checkbox"] {
+        width: 30px;
+        height: 30px;
+        margin-left: 10px;
+    }
+
+    #form-checkbox {
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+    }
+
+    #submitButton {
+        width: 260px;
+        height: 50px;
+    }
